# news

./: .env.example  .gitignore  AGENTS.MD  pyproject.toml
config/: reader_profiles.yaml  sources.yaml  synthesis.yaml
data/: news.db
docs/: 00_northstar_news.md  01_index.md  02_environment.md  03_asset_contract.md  03_news_contract.md  04_reader_profile_contract.md  05_codex_prompt_pack_v3.md  06_news_architecture_v2.md
output/: _step2_base_result.json  daily_brief.json  daily_brief.md  daily_brief_viewer.html
scripts/: 00_run_all.py  01_ingest.py  02_synthesize.py  03_apply_profile.py  04_render.py  README.md
src/news_synthesis/: __init__.py  __main__.py  cli.py  config.py  editorial.py  ingest.py  pipeline_state.py  profile.py  render.py  storage.py  synthesize.py
tests/: test_ingest_fairness.py  test_ingest_runner.py  test_normalization.py  test_pipeline_state.py  test_profile.py  test_render.py  test_storage.py  test_synthesis.py  test_v2_editorial_quality.py
